compilador.output
Terminais sem uso na gramática

    LABEL
    ARRAY
    TYPE
    CASE
    CONST
    MOD
    DOWNTO
    UNTIL
    REPEAT
    T_FILE
    FOR
    IN
    NIL
    T_OF
    PACKED
    RECORD
    SET
    T_TO
    WITH


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 bloco: $@2 parte_declara_vars parte_declara_subrotinas $@3 comando_composto

    6 parte_declara_vars: var

    7 $@4: ε

    8 var: $@4 VAR declara_vars
    9    | ε

   10 declara_vars: declara_vars declara_var
   11             | declara_var

   12 $@5: ε

   13 $@6: ε

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 parte_declara_subrotinas: ε
   21                         | parte_declara_subrotinas declaracao_procedimento PONTO_E_VIRGULA
   22                         | parte_declara_subrotinas declaracao_function PONTO_E_VIRGULA

   23 $@7: ε

   24 declaracao_procedimento: $@7 PROCEDURE IDENT parametros_formais PONTO_E_VIRGULA bloco

   25 $@8: ε

   26 declaracao_function: $@8 FUNCTION IDENT parametros_formais DOIS_PONTOS IDENT PONTO_E_VIRGULA bloco

   27 parametros_formais: ABRE_PARENTESES lista_parametros_formais FECHA_PARENTESES

   28 lista_parametros_formais: secao_parametros_formais
   29                         | lista_parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   30 secao_parametros_formais: VAR lista_idents DOIS_PONTOS IDENT
   31                         | lista_idents DOIS_PONTOS IDENT
   32                         | FUNCTION lista_idents DOIS_PONTOS IDENT
   33                         | PROCEDURE lista_idents

   34 atribuicao: IDENT ATRIBUICAO expressao

   35 lista_expressoes: expressao
   36                 | lista_expressoes VIRGULA expressao

   37 expressao: expressao_simples
   38          | expressao_simples relacao expressao_simples

   39 expressao_simples: sinal termo
   40                  | expressao_simples operador_aditivo termo

   41 termo: fator
   42      | termo operador_multiplicativo fator

   43 fator: variavel
   44      | NUMBER
   45      | chamada_funcao
   46      | ABRE_PARENTESES expressao FECHA_PARENTESES
   47      | NOT fator

   48 sinal: SOMA
   49      | SUB
   50      | ε

   51 relacao: IGUAL
   52        | DIFERENTE
   53        | MAIOR
   54        | MAIOR_IGUAL
   55        | MENOR
   56        | MENOR_IGUAL

   57 operador_aditivo: SOMA
   58                 | SUB
   59                 | OR

   60 operador_multiplicativo: MUL
   61                        | DIV
   62                        | AND

   63 variavel: IDENT
   64         | IDENT ABRE_COLCHETES lista_expressoes FECHA_COLCHETES

   65 chamada_procedimento: IDENT ABRE_PARENTESES lista_expressoes FECHA_PARENTESES
   66                     | IDENT

   67 chamada_funcao: IDENT ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

   68 desvio: GOTO NUMBER

   69 $@9: ε

   70 if_then: IF expressao $@9 THEN comando_sem_rotulo

   71 comando_condicional: if_then

   72 $@10: ε

   73 comando_condicional: if_then ELSE $@10 comando_sem_rotulo

   74 $@11: ε

   75 $@12: ε

   76 comando_repititivo: WHILE $@11 expressao DO $@12 comando_sem_rotulo

   77 $@13: ε

   78 comando_composto: $@13 T_BEGIN comandos T_END

   79 comandos: comando
   80         | comandos comando

   81 comando: NUMBER comando_sem_rotulo PONTO_E_VIRGULA
   82        | comando_sem_rotulo PONTO_E_VIRGULA

   83 comando_sem_rotulo: atribuicao
   84                   | chamada_procedimento
   85                   | desvio
   86                   | comando_composto
   87                   | comando_condicional
   88                   | comando_repititivo


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    VAR (259) 8 30
    LABEL (260)
    ARRAY (261)
    TYPE (262)
    T_BEGIN (263) 78
    T_END (264) 78
    NUMBER <intV> (265) 44 68 81
    CASE (266)
    CONST (267)
    MOD (268)
    NOT (269) 47
    DOWNTO (270)
    IF (271) 70
    THEN (272) 70
    ELSE (273) 73
    GOTO (274) 68
    WHILE (275) 76
    UNTIL (276)
    DO (277) 76
    REPEAT (278)
    T_FILE (279)
    FOR (280)
    FUNCTION (281) 26 32
    PROCEDURE (282) 24 33
    IN (283)
    NIL (284)
    T_OF (285)
    PACKED (286)
    RECORD (287)
    SET (288)
    T_TO (289)
    WITH (290)
    SOMA <tokenType> (291) 48 57
    SUB <tokenType> (292) 49 58
    MUL <tokenType> (293) 60
    DIV <tokenType> (294) 61
    AND <tokenType> (295) 62
    OR <tokenType> (296) 59
    IGUAL <tokenType> (297) 51
    DIFERENTE <tokenType> (298) 52
    MENOR <tokenType> (299) 55
    MENOR_IGUAL <tokenType> (300) 56
    MAIOR <tokenType> (301) 53
    MAIOR_IGUAL <tokenType> (302) 54
    ABRE_PARENTESES (303) 2 27 46 65 67
    FECHA_PARENTESES (304) 2 27 46 65 67
    VIRGULA (305) 16 18 36
    PONTO_E_VIRGULA (306) 2 14 21 22 24 26 29 81 82
    DOIS_PONTOS (307) 14 26 30 31 32
    PONTO (308) 2
    ABRE_COLCHETES (309) 64
    FECHA_COLCHETES (310) 64
    IDENT <tptr> (311) 2 15 16 17 18 19 24 26 30 31 32 34 63 64 65 66 67
    ATRIBUICAO <tptr> (312) 34
    LOWER_THAN_ELSE (313)


Não terminais com as regras onde eles aparecem

    $accept (59)
        à esquerda: 0
    programa (60)
        à esquerda: 2
        à direita: 0
    $@1 (61)
        à esquerda: 1
        à direita: 2
    bloco (62)
        à esquerda: 5
        à direita: 2 24 26
    $@2 (63)
        à esquerda: 3
        à direita: 5
    $@3 (64)
        à esquerda: 4
        à direita: 5
    parte_declara_vars (65)
        à esquerda: 6
        à direita: 5
    var (66)
        à esquerda: 8 9
        à direita: 6
    $@4 (67)
        à esquerda: 7
        à direita: 8
    declara_vars (68)
        à esquerda: 10 11
        à direita: 8 10
    declara_var (69)
        à esquerda: 14
        à direita: 10 11
    $@5 (70)
        à esquerda: 12
        à direita: 14
    $@6 (71)
        à esquerda: 13
        à direita: 14
    tipo <tptr> (72)
        à esquerda: 15
        à direita: 14
    lista_id_var <intV> (73)
        à esquerda: 16 17
        à direita: 14 16
    lista_idents (74)
        à esquerda: 18 19
        à direita: 2 18 30 31 32 33
    parte_declara_subrotinas (75)
        à esquerda: 20 21 22
        à direita: 5 21 22
    declaracao_procedimento (76)
        à esquerda: 24
        à direita: 21
    $@7 (77)
        à esquerda: 23
        à direita: 24
    declaracao_function (78)
        à esquerda: 26
        à direita: 22
    $@8 (79)
        à esquerda: 25
        à direita: 26
    parametros_formais (80)
        à esquerda: 27
        à direita: 24 26
    lista_parametros_formais (81)
        à esquerda: 28 29
        à direita: 27 29
    secao_parametros_formais (82)
        à esquerda: 30 31 32 33
        à direita: 28 29
    atribuicao (83)
        à esquerda: 34
        à direita: 83
    lista_expressoes <Vec_TypeID> (84)
        à esquerda: 35 36
        à direita: 36 64 65 67
    expressao <typeID> (85)
        à esquerda: 37 38
        à direita: 34 35 36 46 70 76
    expressao_simples <typeID> (86)
        à esquerda: 39 40
        à direita: 37 38 40
    termo <typeID> (87)
        à esquerda: 41 42
        à direita: 39 40 42
    fator <typeID> (88)
        à esquerda: 43 44 45 46 47
        à direita: 41 42 47
    sinal <boolV> (89)
        à esquerda: 48 49 50
        à direita: 39
    relacao <tokenType> (90)
        à esquerda: 51 52 53 54 55 56
        à direita: 38
    operador_aditivo <tokenType> (91)
        à esquerda: 57 58 59
        à direita: 40
    operador_multiplicativo <tokenType> (92)
        à esquerda: 60 61 62
        à direita: 42
    variavel <tptr> (93)
        à esquerda: 63 64
        à direita: 43
    chamada_procedimento (94)
        à esquerda: 65 66
        à direita: 84
    chamada_funcao (95)
        à esquerda: 67
        à direita: 45
    desvio (96)
        à esquerda: 68
        à direita: 85
    if_then (97)
        à esquerda: 70
        à direita: 71 73
    $@9 (98)
        à esquerda: 69
        à direita: 70
    comando_condicional (99)
        à esquerda: 71 73
        à direita: 87
    $@10 (100)
        à esquerda: 72
        à direita: 73
    comando_repititivo (101)
        à esquerda: 76
        à direita: 88
    $@11 (102)
        à esquerda: 74
        à direita: 76
    $@12 (103)
        à esquerda: 75
        à direita: 76
    comando_composto (104)
        à esquerda: 78
        à direita: 5 86
    $@13 (105)
        à esquerda: 77
        à direita: 78
    comandos (106)
        à esquerda: 79 80
        à direita: 78 80
    comando (107)
        à esquerda: 81 82
        à direita: 79 80
    comando_sem_rotulo (108)
        à esquerda: 83 84 85 86 87 88
        à direita: 70 73 76 81 82


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   19 lista_idents: IDENT •

    $padrão  reduzir usando a regra 19 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   18 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    $padrão  reduzir usando a regra 3 ($@2)

    bloco  ir ao estado 13
    $@2    ir ao estado 14


Estado 12

   18 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 18 (lista_idents)


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 15


Estado 14

    5 bloco: $@2 • parte_declara_vars parte_declara_subrotinas $@3 comando_composto

    VAR      reduzir usando a regra 7 ($@4)
    $padrão  reduzir usando a regra 9 (var)

    parte_declara_vars  ir ao estado 16
    var                 ir ao estado 17
    $@4                 ir ao estado 18


Estado 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 16

    5 bloco: $@2 parte_declara_vars • parte_declara_subrotinas $@3 comando_composto

    $padrão  reduzir usando a regra 20 (parte_declara_subrotinas)

    parte_declara_subrotinas  ir ao estado 19


Estado 17

    6 parte_declara_vars: var •

    $padrão  reduzir usando a regra 6 (parte_declara_vars)


Estado 18

    8 var: $@4 • VAR declara_vars

    VAR  deslocar, e ir ao estado 20


Estado 19

    5 bloco: $@2 parte_declara_vars parte_declara_subrotinas • $@3 comando_composto
   21 parte_declara_subrotinas: parte_declara_subrotinas • declaracao_procedimento PONTO_E_VIRGULA
   22                         | parte_declara_subrotinas • declaracao_function PONTO_E_VIRGULA

    FUNCTION   reduzir usando a regra 25 ($@8)
    PROCEDURE  reduzir usando a regra 23 ($@7)
    $padrão    reduzir usando a regra 4 ($@3)

    $@3                      ir ao estado 21
    declaracao_procedimento  ir ao estado 22
    $@7                      ir ao estado 23
    declaracao_function      ir ao estado 24
    $@8                      ir ao estado 25


Estado 20

    8 var: $@4 VAR • declara_vars

    $padrão  reduzir usando a regra 12 ($@5)

    declara_vars  ir ao estado 26
    declara_var   ir ao estado 27
    $@5           ir ao estado 28


Estado 21

    5 bloco: $@2 parte_declara_vars parte_declara_subrotinas $@3 • comando_composto

    $padrão  reduzir usando a regra 77 ($@13)

    comando_composto  ir ao estado 29
    $@13              ir ao estado 30


Estado 22

   21 parte_declara_subrotinas: parte_declara_subrotinas declaracao_procedimento • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 31


Estado 23

   24 declaracao_procedimento: $@7 • PROCEDURE IDENT parametros_formais PONTO_E_VIRGULA bloco

    PROCEDURE  deslocar, e ir ao estado 32


Estado 24

   22 parte_declara_subrotinas: parte_declara_subrotinas declaracao_function • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 33


Estado 25

   26 declaracao_function: $@8 • FUNCTION IDENT parametros_formais DOIS_PONTOS IDENT PONTO_E_VIRGULA bloco

    FUNCTION  deslocar, e ir ao estado 34


Estado 26

    8 var: $@4 VAR declara_vars •
   10 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 12 ($@5)
    $padrão  reduzir usando a regra 8 (var)

    declara_var  ir ao estado 35
    $@5          ir ao estado 28


Estado 27

   11 declara_vars: declara_var •

    $padrão  reduzir usando a regra 11 (declara_vars)


Estado 28

   14 declara_var: $@5 • lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 36

    lista_id_var  ir ao estado 37


Estado 29

    5 bloco: $@2 parte_declara_vars parte_declara_subrotinas $@3 comando_composto •

    $padrão  reduzir usando a regra 5 (bloco)


Estado 30

   78 comando_composto: $@13 • T_BEGIN comandos T_END

    T_BEGIN  deslocar, e ir ao estado 38


Estado 31

   21 parte_declara_subrotinas: parte_declara_subrotinas declaracao_procedimento PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 21 (parte_declara_subrotinas)


Estado 32

   24 declaracao_procedimento: $@7 PROCEDURE • IDENT parametros_formais PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 39


Estado 33

   22 parte_declara_subrotinas: parte_declara_subrotinas declaracao_function PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 22 (parte_declara_subrotinas)


Estado 34

   26 declaracao_function: $@8 FUNCTION • IDENT parametros_formais DOIS_PONTOS IDENT PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 40


Estado 35

   10 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 10 (declara_vars)


Estado 36

   17 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 37

   14 declara_var: $@5 lista_id_var • DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 41
    DOIS_PONTOS  deslocar, e ir ao estado 42


Estado 38

   78 comando_composto: $@13 T_BEGIN • comandos T_END

    NUMBER  deslocar, e ir ao estado 43
    IF      deslocar, e ir ao estado 44
    GOTO    deslocar, e ir ao estado 45
    WHILE   deslocar, e ir ao estado 46
    IDENT   deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 77 ($@13)

    atribuicao            ir ao estado 48
    chamada_procedimento  ir ao estado 49
    desvio                ir ao estado 50
    if_then               ir ao estado 51
    comando_condicional   ir ao estado 52
    comando_repititivo    ir ao estado 53
    comando_composto      ir ao estado 54
    $@13                  ir ao estado 30
    comandos              ir ao estado 55
    comando               ir ao estado 56
    comando_sem_rotulo    ir ao estado 57


Estado 39

   24 declaracao_procedimento: $@7 PROCEDURE IDENT • parametros_formais PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 58

    parametros_formais  ir ao estado 59


Estado 40

   26 declaracao_function: $@8 FUNCTION IDENT • parametros_formais DOIS_PONTOS IDENT PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 58

    parametros_formais  ir ao estado 60


Estado 41

   16 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 61


Estado 42

   14 declara_var: $@5 lista_id_var DOIS_PONTOS • tipo $@6 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 62

    tipo  ir ao estado 63


Estado 43

   81 comando: NUMBER • comando_sem_rotulo PONTO_E_VIRGULA

    IF     deslocar, e ir ao estado 44
    GOTO   deslocar, e ir ao estado 45
    WHILE  deslocar, e ir ao estado 46
    IDENT  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 77 ($@13)

    atribuicao            ir ao estado 48
    chamada_procedimento  ir ao estado 49
    desvio                ir ao estado 50
    if_then               ir ao estado 51
    comando_condicional   ir ao estado 52
    comando_repititivo    ir ao estado 53
    comando_composto      ir ao estado 54
    $@13                  ir ao estado 30
    comando_sem_rotulo    ir ao estado 64


Estado 44

   70 if_then: IF • expressao $@9 THEN comando_sem_rotulo

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    expressao          ir ao estado 67
    expressao_simples  ir ao estado 68
    sinal              ir ao estado 69


Estado 45

   68 desvio: GOTO • NUMBER

    NUMBER  deslocar, e ir ao estado 70


Estado 46

   76 comando_repititivo: WHILE • $@11 expressao DO $@12 comando_sem_rotulo

    $padrão  reduzir usando a regra 74 ($@11)

    $@11  ir ao estado 71


Estado 47

   34 atribuicao: IDENT • ATRIBUICAO expressao
   65 chamada_procedimento: IDENT • ABRE_PARENTESES lista_expressoes FECHA_PARENTESES
   66                     | IDENT •

    ABRE_PARENTESES  deslocar, e ir ao estado 72
    ATRIBUICAO       deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 66 (chamada_procedimento)


Estado 48

   83 comando_sem_rotulo: atribuicao •

    $padrão  reduzir usando a regra 83 (comando_sem_rotulo)


Estado 49

   84 comando_sem_rotulo: chamada_procedimento •

    $padrão  reduzir usando a regra 84 (comando_sem_rotulo)


Estado 50

   85 comando_sem_rotulo: desvio •

    $padrão  reduzir usando a regra 85 (comando_sem_rotulo)


Estado 51

   71 comando_condicional: if_then •
   73                    | if_then • ELSE $@10 comando_sem_rotulo

    ELSE  deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 71 (comando_condicional)


Estado 52

   87 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 87 (comando_sem_rotulo)


Estado 53

   88 comando_sem_rotulo: comando_repititivo •

    $padrão  reduzir usando a regra 88 (comando_sem_rotulo)


Estado 54

   86 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 86 (comando_sem_rotulo)


Estado 55

   78 comando_composto: $@13 T_BEGIN comandos • T_END
   80 comandos: comandos • comando

    T_END   deslocar, e ir ao estado 75
    NUMBER  deslocar, e ir ao estado 43
    IF      deslocar, e ir ao estado 44
    GOTO    deslocar, e ir ao estado 45
    WHILE   deslocar, e ir ao estado 46
    IDENT   deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 77 ($@13)

    atribuicao            ir ao estado 48
    chamada_procedimento  ir ao estado 49
    desvio                ir ao estado 50
    if_then               ir ao estado 51
    comando_condicional   ir ao estado 52
    comando_repititivo    ir ao estado 53
    comando_composto      ir ao estado 54
    $@13                  ir ao estado 30
    comando               ir ao estado 76
    comando_sem_rotulo    ir ao estado 57


Estado 56

   79 comandos: comando •

    $padrão  reduzir usando a regra 79 (comandos)


Estado 57

   82 comando: comando_sem_rotulo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 77


Estado 58

   27 parametros_formais: ABRE_PARENTESES • lista_parametros_formais FECHA_PARENTESES

    VAR        deslocar, e ir ao estado 78
    FUNCTION   deslocar, e ir ao estado 79
    PROCEDURE  deslocar, e ir ao estado 80
    IDENT      deslocar, e ir ao estado 7

    lista_idents              ir ao estado 81
    lista_parametros_formais  ir ao estado 82
    secao_parametros_formais  ir ao estado 83


Estado 59

   24 declaracao_procedimento: $@7 PROCEDURE IDENT parametros_formais • PONTO_E_VIRGULA bloco

    PONTO_E_VIRGULA  deslocar, e ir ao estado 84


Estado 60

   26 declaracao_function: $@8 FUNCTION IDENT parametros_formais • DOIS_PONTOS IDENT PONTO_E_VIRGULA bloco

    DOIS_PONTOS  deslocar, e ir ao estado 85


Estado 61

   16 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 16 (lista_id_var)


Estado 62

   15 tipo: IDENT •

    $padrão  reduzir usando a regra 15 (tipo)


Estado 63

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo • $@6 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 13 ($@6)

    $@6  ir ao estado 86


Estado 64

   81 comando: NUMBER comando_sem_rotulo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 87


Estado 65

   48 sinal: SOMA •

    $padrão  reduzir usando a regra 48 (sinal)


Estado 66

   49 sinal: SUB •

    $padrão  reduzir usando a regra 49 (sinal)


Estado 67

   70 if_then: IF expressao • $@9 THEN comando_sem_rotulo

    $padrão  reduzir usando a regra 69 ($@9)

    $@9  ir ao estado 88


Estado 68

   37 expressao: expressao_simples •
   38          | expressao_simples • relacao expressao_simples
   40 expressao_simples: expressao_simples • operador_aditivo termo

    SOMA         deslocar, e ir ao estado 89
    SUB          deslocar, e ir ao estado 90
    OR           deslocar, e ir ao estado 91
    IGUAL        deslocar, e ir ao estado 92
    DIFERENTE    deslocar, e ir ao estado 93
    MENOR        deslocar, e ir ao estado 94
    MENOR_IGUAL  deslocar, e ir ao estado 95
    MAIOR        deslocar, e ir ao estado 96
    MAIOR_IGUAL  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 37 (expressao)

    relacao           ir ao estado 98
    operador_aditivo  ir ao estado 99


Estado 69

   39 expressao_simples: sinal • termo

    NUMBER           deslocar, e ir ao estado 100
    NOT              deslocar, e ir ao estado 101
    ABRE_PARENTESES  deslocar, e ir ao estado 102
    IDENT            deslocar, e ir ao estado 103

    termo           ir ao estado 104
    fator           ir ao estado 105
    variavel        ir ao estado 106
    chamada_funcao  ir ao estado 107


Estado 70

   68 desvio: GOTO NUMBER •

    $padrão  reduzir usando a regra 68 (desvio)


Estado 71

   76 comando_repititivo: WHILE $@11 • expressao DO $@12 comando_sem_rotulo

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    expressao          ir ao estado 108
    expressao_simples  ir ao estado 68
    sinal              ir ao estado 69


Estado 72

   65 chamada_procedimento: IDENT ABRE_PARENTESES • lista_expressoes FECHA_PARENTESES

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    lista_expressoes   ir ao estado 109
    expressao          ir ao estado 110
    expressao_simples  ir ao estado 68
    sinal              ir ao estado 69


Estado 73

   34 atribuicao: IDENT ATRIBUICAO • expressao

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    expressao          ir ao estado 111
    expressao_simples  ir ao estado 68
    sinal              ir ao estado 69


Estado 74

   73 comando_condicional: if_then ELSE • $@10 comando_sem_rotulo

    $padrão  reduzir usando a regra 72 ($@10)

    $@10  ir ao estado 112


Estado 75

   78 comando_composto: $@13 T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 78 (comando_composto)


Estado 76

   80 comandos: comandos comando •

    $padrão  reduzir usando a regra 80 (comandos)


Estado 77

   82 comando: comando_sem_rotulo PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 82 (comando)


Estado 78

   30 secao_parametros_formais: VAR • lista_idents DOIS_PONTOS IDENT

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 113


Estado 79

   32 secao_parametros_formais: FUNCTION • lista_idents DOIS_PONTOS IDENT

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 114


Estado 80

   33 secao_parametros_formais: PROCEDURE • lista_idents

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 115


Estado 81

   18 lista_idents: lista_idents • VIRGULA IDENT
   31 secao_parametros_formais: lista_idents • DOIS_PONTOS IDENT

    VIRGULA      deslocar, e ir ao estado 10
    DOIS_PONTOS  deslocar, e ir ao estado 116


Estado 82

   27 parametros_formais: ABRE_PARENTESES lista_parametros_formais • FECHA_PARENTESES
   29 lista_parametros_formais: lista_parametros_formais • PONTO_E_VIRGULA secao_parametros_formais

    FECHA_PARENTESES  deslocar, e ir ao estado 117
    PONTO_E_VIRGULA   deslocar, e ir ao estado 118


Estado 83

   28 lista_parametros_formais: secao_parametros_formais •

    $padrão  reduzir usando a regra 28 (lista_parametros_formais)


Estado 84

   24 declaracao_procedimento: $@7 PROCEDURE IDENT parametros_formais PONTO_E_VIRGULA • bloco

    $padrão  reduzir usando a regra 3 ($@2)

    bloco  ir ao estado 119
    $@2    ir ao estado 14


Estado 85

   26 declaracao_function: $@8 FUNCTION IDENT parametros_formais DOIS_PONTOS • IDENT PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 120


Estado 86

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 121


Estado 87

   81 comando: NUMBER comando_sem_rotulo PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 81 (comando)


Estado 88

   70 if_then: IF expressao $@9 • THEN comando_sem_rotulo

    THEN  deslocar, e ir ao estado 122


Estado 89

   57 operador_aditivo: SOMA •

    $padrão  reduzir usando a regra 57 (operador_aditivo)


Estado 90

   58 operador_aditivo: SUB •

    $padrão  reduzir usando a regra 58 (operador_aditivo)


Estado 91

   59 operador_aditivo: OR •

    $padrão  reduzir usando a regra 59 (operador_aditivo)


Estado 92

   51 relacao: IGUAL •

    $padrão  reduzir usando a regra 51 (relacao)


Estado 93

   52 relacao: DIFERENTE •

    $padrão  reduzir usando a regra 52 (relacao)


Estado 94

   55 relacao: MENOR •

    $padrão  reduzir usando a regra 55 (relacao)


Estado 95

   56 relacao: MENOR_IGUAL •

    $padrão  reduzir usando a regra 56 (relacao)


Estado 96

   53 relacao: MAIOR •

    $padrão  reduzir usando a regra 53 (relacao)


Estado 97

   54 relacao: MAIOR_IGUAL •

    $padrão  reduzir usando a regra 54 (relacao)


Estado 98

   38 expressao: expressao_simples relacao • expressao_simples

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    expressao_simples  ir ao estado 123
    sinal              ir ao estado 69


Estado 99

   40 expressao_simples: expressao_simples operador_aditivo • termo

    NUMBER           deslocar, e ir ao estado 100
    NOT              deslocar, e ir ao estado 101
    ABRE_PARENTESES  deslocar, e ir ao estado 102
    IDENT            deslocar, e ir ao estado 103

    termo           ir ao estado 124
    fator           ir ao estado 105
    variavel        ir ao estado 106
    chamada_funcao  ir ao estado 107


Estado 100

   44 fator: NUMBER •

    $padrão  reduzir usando a regra 44 (fator)


Estado 101

   47 fator: NOT • fator

    NUMBER           deslocar, e ir ao estado 100
    NOT              deslocar, e ir ao estado 101
    ABRE_PARENTESES  deslocar, e ir ao estado 102
    IDENT            deslocar, e ir ao estado 103

    fator           ir ao estado 125
    variavel        ir ao estado 106
    chamada_funcao  ir ao estado 107


Estado 102

   46 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES

    SOMA  deslocar, e ir ao estado 65
    SUB   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 50 (sinal)

    expressao          ir ao estado 126
    expressao_simples  ir ao estado 68
    sinal              ir ao estado 69


Estado 103

   63 variavel: IDENT •
   64         | IDENT • ABRE_COLCHETES lista_expressoes FECHA_COLCHETES
   67 chamada_funcao: IDENT • ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 127
    ABRE_COLCHETES   deslocar, e ir ao estado 128

    $padrão  reduzir usando a regra 63 (variavel)


Estado 104

   39 expressao_simples: sinal termo •
   42 termo: termo • operador_multiplicativo fator

    MUL  deslocar, e ir ao estado 129
    DIV  deslocar, e ir ao estado 130
    AND  deslocar, e ir ao estado 131

    $padrão  reduzir usando a regra 39 (expressao_simples)

    operador_multiplicativo  ir ao estado 132


Estado 105

   41 termo: fator •

    $padrão  reduzir usando a regra 41 (termo)


Estado 106

   43 fator: variavel •

    $padrão  reduzir usando a regra 43 (fator)


Estado 107

   45 fator: chamada_funcao •

    $padrão  reduzir usando a regra 45 (fator)


Estado 108

   76 comando_repititivo: WHILE $@11 expressao • DO $@12 comando_sem_rotulo

    DO  deslocar, e ir ao estado 133


Estado 109
